cp/rabbitmq/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: my-cp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public
  rules:
    - host: rabbitmq.k8s.loc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-release-rabbitmq
                port:
                  number: 15672
